# ruterstop

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  planner.py  pyproject.toml  requirements.txt  ruterstop.py  setup.py
.deploy/: Dockerfile  Dockerfile.matrix-install  Dockerfile.matrix-unit-tests  bump_version.py  run-tests.sh  run_tests.py
.docker/: Dockerfile  run-tests.sh  test-35.Dockerfile  test-36.Dockerfile  test-37.Dockerfile  test-38.Dockerfile
.github/workflows/: python-pypi-publish.yml  python-pypi-test-publish.yml  python-tests.yml  pythonpackage.yml
examples/arduino-esp8266-feather-oled/: README.md  arduino-esp8266-feather-oled.ino
ruterstop/: __init__.py  __main__.py  main.py  utils.py
ruterstop/tests/: test_cli.py  test_data.json  test_e2e.py  test_ruterstop.py  test_stop_data.json  test_utils.py  test_webapp.py
screen/: screen.ino
src/ruterstop/: __init__.py  utils.py
tests/: test_ruterstop.py
